manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-db-vault-kaf-redis-arg-kust-kyv-gra-loki-temp-pgadm-chat
  namespace: davtrowebdbvault
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: website-db-vault-kaf-redis-arg-kust-kyv-gra-loki-temp-pgadm-chat.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-db-vault-kaf-redis-arg-kust-kyv-gra-loki-temp-pgadm-chat
            port:
              number: 80
  - host: pgadmin.website-db-vault-kaf-redis-arg-kust-kyv-gra-loki-temp-pgadm-chat.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pgadmin
            port:
              number: 80
  - host: grafana.website-db-vault-kaf-redis-arg-kust-kyv-gra-loki-temp-pgadm-chat.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
